; ModuleID = '/home/carl/AnghaBench/8cc/extr_gen.c_emit_data_charptr.c'
source_filename = "/home/carl/AnghaBench/8cc/extr_gen.c_emit_data_charptr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [9 x i8] c".data %d\00", align 1
@.str.1 = private unnamed_addr constant [13 x i8] c".string \22%s\22\00", align 1
@.str.2 = private unnamed_addr constant [9 x i8] c".quad %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @emit_data_charptr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @emit_data_charptr(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = call i8* (...) @make_label()
  store i8* %6, i8** %5, align 8
  %7 = load i32, i32* %4, align 4
  %8 = add nsw i32 %7, 1
  %9 = call i32 (i8*, ...) @emit(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i32 %8)
  %10 = load i8*, i8** %5, align 8
  %11 = call i32 @emit_label(i8* %10)
  %12 = load i8*, i8** %3, align 8
  %13 = call i8* @quote_cstring(i8* %12)
  %14 = call i32 (i8*, ...) @emit(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0), i8* %13)
  %15 = load i32, i32* %4, align 4
  %16 = call i32 (i8*, ...) @emit(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i32 %15)
  %17 = load i8*, i8** %5, align 8
  %18 = call i32 (i8*, ...) @emit(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0), i8* %17)
  ret void
}

declare dso_local i8* @make_label(...) #1

declare dso_local i32 @emit(i8*, ...) #1

declare dso_local i32 @emit_label(i8*) #1

declare dso_local i8* @quote_cstring(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
